fixes text alignment of .why span

--- a/styles/the-rebellion-styles/the-rebellion.scss
+++ b/styles/the-rebellion-styles/the-rebellion.scss
@@ -206,7 +206,7 @@ main{
 
         span{
             font-family: $secondary;
-            font-size: 1.4em;
+            font-size: 1.3em;
         }
     }
 }
